--- a/style2.css
+++ b/style2.css
@@ -7,3 +7,16 @@ body {
     background-size: cover;
     font-family: sans-serif;
 }
+
+main {
+    color: white;
+}
+
+header {
+    background-color: orange;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 80px;
+}
