--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,6 @@
 header img {
     height: 80px;
+    margin-left: 40px;
 }
 body {
     height: 125vh;
@@ -7,6 +8,7 @@ body {
     background-size: cover;
     font-family: sans-serif;
     margin-top: 80px;
+    padding: 30px;
 }
 
 main {
@@ -20,4 +22,20 @@ header {
     left: 0;
     right: 0;
     height: 80px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 25px 0 black;
+}
+
+header * {
+    display: inline;
+}
+
+header li {
+    margin: 20px;
+}
+
+header li a {
+    color: black;
+    text-decoration: none;
 }
