--- a/style2.css
+++ b/style2.css
@@ -39,3 +39,15 @@ header li a {
     color: black;
     text-decoration: none;
 }
+
+button {
+ display: block;
+ border: solid white;
+ border-width: 0 10px;
+ border-radius: 0;
+ background: green;
+ color: white;
+ font-size: 18px;
+ margin: -60px auto 15px;
+ padding: 15px;
+}
