--- a/style2.css
+++ b/style2.css
@@ -2,6 +2,9 @@ header img {
     height: 80px;
     margin-left: 40px;
 }
+
+@import url(https://allfont.net/allfont.css?fonts=pusab);
+
 body {
     height: 125vh;
     background-image: url('https://i.imgur.com/kW1fQkN.png');
