--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,3 @@
-@import url('http://fonts.cdnfonts.com/css/pusab');
-
 header img {
     height: 80px;
     margin-left: 40px;
@@ -8,14 +6,13 @@ body {
     height: 125vh;
     background-image: url('https://i.imgur.com/kW1fQkN.png');
     background-size: cover;
-    font-family: 'Pusab', sans-serif;
+    font-family: sans-serif;
     margin-top: 80px;
     padding: 30px;
 }
 
 main {
     color: white;
-    font-family: 'Pusab', sans-serif;
 }
 
 header {
@@ -28,22 +25,17 @@ header {
     display: flex;
     align-items: center;
     box-shadow: 0 0 25px 0 black;
-    font-family: 'Pusab', sans-serif;
 }
 
 header * {
     display: inline;
-    font-family: 'Pusab', sans-serif;
 }
 
 header li {
     margin: 20px;
-    font-family: 'Pusab', sans-serif;
 }
 
 header li a {
     color: black;
     text-decoration: none;
-    font-family: 'Pusab', sans-serif;
 }
-
