--- a/style2.css
+++ b/style2.css
@@ -4,7 +4,7 @@ header img {
 }
 body {
     height: 125vh;
-    background-image: url('https://i.imgur.com/kW1fQkN.png');
+    background-image: url('https://i.imgur.com/lPbgXzH.gif');
     background-size: cover;
     font-family: sans-serif;
     margin-top: 80px;
