--- a/style2.css
+++ b/style2.css
@@ -16,7 +16,7 @@ main {
 }
 
 header {
-    background-color: black;
+    background-color: white;
     position: fixed;
     top: 0;
     left: 0;
@@ -36,6 +36,6 @@ header li {
 }
 
 header li a {
-    color: white;
+    color: black;
     text-decoration: none;
 }
